[gd_scene load_steps=21 format=2]

[ext_resource path="res://hud/hud.gd" type="Script" id=1]
[ext_resource path="res://art/life_heart.png" type="Texture" id=2]
[ext_resource path="res://art/fonts/firasans_bold_26.tres" type="DynamicFont" id=3]
[ext_resource path="res://art/chirimoya_big.png" type="Texture" id=4]
[ext_resource path="res://art/borlas.png" type="Texture" id=5]
[ext_resource path="res://art/text_sbox.png" type="Texture" id=6]
[ext_resource path="res://art/key1.png" type="Texture" id=7]
[ext_resource path="res://art/key2.png" type="Texture" id=8]
[ext_resource path="res://art/key3.png" type="Texture" id=9]
[ext_resource path="res://art/alpaca_coin_indicator.png" type="Texture" id=10]
[ext_resource path="res://art/pause_button.png" type="Texture" id=11]
[ext_resource path="res://art/intro_menu_back.png" type="Texture" id=12]
[ext_resource path="res://art/button_left.png" type="Texture" id=13]
[ext_resource path="res://art/button_attack.png" type="Texture" id=14]
[ext_resource path="res://art/button_right.png" type="Texture" id=15]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 50.0
margin_right = 50.0
margin_top = 50.0
margin_bottom = 50.0

[sub_resource type="Animation" id=2]
resource_name = "fadein"
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialog/text:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "", "It's dangerous to go out. Take this jetpack!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialog:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialog:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath("dialog:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.93 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialog:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "glow"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("jp_right/attack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.672566, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("jp_right/attack:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.6, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("jp_left/attack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.672566, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("jp_left/attack:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.6, 1.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "noglow"
tracks/0/type = "value"
tracks/0/path = NodePath("jp_right/attack:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("jp_left/attack:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("jp_left/attack:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.8, 0.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("jp_right/attack:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.8, 0.1 ]
}

[node name="hud" type="ReferenceRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="Node2D" parent="."]

[node name="heart_0" type="Sprite" parent="life"]
position = Vector2( 56.6998, 49.8719 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="heart_1" type="Sprite" parent="life"]
position = Vector2( 111.784, 49.8719 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="fruit_count" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.8 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -295.0
margin_top = 18.0
margin_right = 510.0
margin_bottom = 68.0

[node name="amount" type="Label" parent="fruit_count"]
margin_left = 141.0
margin_top = 17.0
margin_right = 203.0
margin_bottom = 65.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="TextureFrame" type="TextureRect" parent="fruit_count"]
margin_left = 92.0
margin_top = 13.0
margin_right = 129.0
margin_bottom = 52.0
texture = ExtResource( 4 )
expand = true

[node name="Sprite" type="Sprite" parent="fruit_count"]
position = Vector2( 201.662, 31.0249 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="life_amount" type="Label" parent="fruit_count"]
margin_left = 237.0
margin_top = 17.0
margin_right = 285.0
margin_bottom = 65.0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="dialog" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = 24.0
margin_top = 81.0
margin_right = -24.0
margin_bottom = 268.0
custom_styles/panel = SubResource( 1 )

[node name="text" type="Label" parent="dialog"]
anchor_right = 1.0
margin_left = 41.0
margin_top = 35.0
margin_right = -32.0
margin_bottom = 148.0
size_flags_vertical = 0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.707965 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 3 )
text = "It's dangerous to go out. Take this jetpack!"
autowrap = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/fadein = SubResource( 2 )
anims/fadeout = SubResource( 3 )

[node name="keys" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -206.0
margin_top = 85.0
margin_right = -19.0
margin_bottom = 157.0

[node name="key_0" type="TextureRect" parent="keys"]
visible = false
margin_left = 47.0
margin_right = 72.0
margin_bottom = 51.0
texture = ExtResource( 7 )
expand = true

[node name="key_1" type="TextureRect" parent="keys"]
visible = false
margin_left = 98.0
margin_right = 123.0
margin_bottom = 51.0
texture = ExtResource( 8 )
expand = true

[node name="key_2" type="TextureRect" parent="keys"]
visible = false
margin_left = 144.0
margin_right = 169.0
margin_bottom = 51.0
texture = ExtResource( 9 )
expand = true

[node name="coins" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 95.0

[node name="base" type="Control" parent="coins"]
margin_left = 640.0
margin_top = 47.0
margin_right = 640.0
margin_bottom = 47.0

[node name="large_coin_0" type="Sprite" parent="coins/base"]
position = Vector2( -60.3485, 3.54479 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
hframes = 2

[node name="large_coin_1" type="Sprite" parent="coins/base"]
position = Vector2( -4.78027, 3.54479 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
hframes = 2

[node name="large_coin_2" type="Sprite" parent="coins/base"]
position = Vector2( 51.6177, 4.74225 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )
hframes = 2

[node name="pause" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 25.0
margin_top = 79.0
margin_right = 89.0
margin_bottom = 143.0
texture_normal = ExtResource( 11 )

[node name="back" type="TextureButton" parent="."]
pause_mode = 2
visible = false
margin_left = 107.0
margin_top = 81.0
margin_right = 171.0
margin_bottom = 145.0
texture_normal = ExtResource( 12 )

[node name="jp_left" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 79.0
margin_top = -69.0
margin_right = 119.0
margin_bottom = -29.0

[node name="move" type="Sprite" parent="jp_left"]
modulate = Color( 1, 1, 1, 0.4 )
texture = ExtResource( 13 )
hframes = 2

[node name="attack" type="Sprite" parent="jp_left"]
modulate = Color( 1, 1, 1, 0.1 )
position = Vector2( 0, -158.784 )
texture = ExtResource( 14 )
hframes = 2

[node name="jp_right" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -70.0
margin_right = -39.0
margin_bottom = -30.0

[node name="move" type="Sprite" parent="jp_right"]
modulate = Color( 1, 1, 1, 0.4 )
texture = ExtResource( 15 )
hframes = 2

[node name="attack" type="Sprite" parent="jp_right"]
modulate = Color( 1, 1, 1, 0.1 )
position = Vector2( 0, -158.784 )
texture = ExtResource( 14 )
hframes = 2

[node name="attack_glow" type="AnimationPlayer" parent="."]
playback_speed = 1.8
anims/glow = SubResource( 4 )
anims/noglow = SubResource( 5 )

[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
